Added russian translation Changed encoding for correct output of russian words Translated all static names on jsp pages

--- a/src/com/savko/i18n/text.properties
+++ b/src/com/savko/i18n/text.properties
@@ -1,13 +1,7 @@
 language=Language
 home=Home
-gallery=Gallery
 book=Book
 about=About
-suites.and.rooms=Suites & Rooms
-events=Events
-festive.winter.escape=Festive Winter Escape
-festive.beer.escape=Festive Beer Escape
-find.out.more=Find out more...
 contact.us=Contact us
 follow.the.hostel=Follow the Hostel
 profile=Profile
@@ -17,11 +11,39 @@ last.name=Last name
 login=Login
 password=Password
 confirm=Confirm
-make.a.room.reservation=Make a room reservation
-place.number=Place number
+confirmed=Confirmed
+not.confirmed=Not confirmed
+make.room.reservation=Make a room reservation
+amount.of.places=Amount of places
 date.from=Date from
 date.to=Date to
-check.reservation=Check reservation
-back.to.top=Back to top
 registration=Registration
 log.in=Log in
+your.reservation=Your reservation
+cost=Cost
+card.number=Card number
+month=Month
+year=Year
+owner=Owner's name
+security.code=Security code
+pay=Pay
+paid=Paid
+not.paid=Not paid
+my.requests=My requests
+welcome=Welcome
+wait.confirmation=Wait confirmation
+approved.by=Approved by
+status=Status
+request.info=Request info
+your.booking.request=Your booking request
+your.booking.requests=Your booking requests
+banned.user.message=You have been banned. You can't book requests
+cause=Cause
+empty.user.message=You should sign in before booking
+empty.requests.message=You do not have any booking requests
+text.about=As one of the most iconic hostels, The Royal Hostel is quite simply the place to be in London. Whether you \
+  are staying in one of the exquisite rooms, unwinding in the spa, enjoying homemade food, you will experience the epitome of timeless peace. The Royal Hostel, which is superbly \
+  located in the centre of London and overlooks both Hyde Park and Mayfair, is a favourite choice of each traveler. \
+  Spacious, pleasant, each room features specially commissioned fabrics, cushioned furniture and exceedingly \
+  comfortable beds, while our white marble bathrooms are said to feature the deepest baths in London. Enjoy the finest \
+  pastries with your afternoon tea at The Promenade, visit the hotspot that is China Tang or The Grill.
