Added stylized error page

--- a/src/com/savko/i18n/text.properties
+++ b/src/com/savko/i18n/text.properties
@@ -41,6 +41,10 @@ banned.user.message=You have been banned. You can't book requests
 cause=Cause
 empty.user.message=You should sign in before booking
 empty.requests.message=You do not have any booking requests
+something.went.wrong=Something went wrong
+return.to.the.main.page=Please return to the main page
+oops=Oops
+error.code=Error code
 text.about=As one of the most iconic hostels, The Royal Hostel is quite simply the place to be in London. Whether you \
   are staying in one of the exquisite rooms, unwinding in the spa, enjoying homemade food, you will experience the epitome of timeless peace. The Royal Hostel, which is superbly \
   located in the centre of London and overlooks both Hyde Park and Mayfair, is a favourite choice of each traveler. \
