Added discounts Admin can set discount for each user Cost depends on user's discount

--- a/src/com/savko/i18n/text.properties
+++ b/src/com/savko/i18n/text.properties
@@ -5,6 +5,7 @@ about=About
 contact.us=Contact us
 follow.the.hostel=Follow the Hostel
 profile=Profile
+your.profile=Your profile
 log.out=Log out
 name=Name
 last.name=Last name
@@ -21,6 +22,7 @@ registration=Registration
 log.in=Log in
 your.reservation=Your reservation
 cost=Cost
+discount=Discount
 card.number=Card number
 month=Month
 year=Year
@@ -30,7 +32,6 @@ pay=Pay
 paid=Paid
 not.paid=Not paid
 my.requests=My requests
-welcome=Welcome
 wait.confirmation=Wait confirmation
 approved.by=Approved by
 status=Status
