--- a/src/com/savko/i18n/text.properties
+++ b/src/com/savko/i18n/text.properties
@@ -14,6 +14,8 @@ password=Password
 confirm=Confirm
 confirmed=Confirmed
 not.confirmed=Not confirmed
+declined=Declined
+info=Info
 make.room.reservation=Make a room reservation
 amount.of.places=Amount of places
 date.from=Date from
