Changed way of adding discount to client Fixed validation bug concerning reading russian characters

--- a/src/com/savko/i18n/text.properties
+++ b/src/com/savko/i18n/text.properties
@@ -15,6 +15,7 @@ confirm=Confirm
 confirmed=Confirmed
 not.confirmed=Not confirmed
 declined=Declined
+not.declined=Not declined
 info=Info
 make.room.reservation=Make a room reservation
 amount.of.places=Amount of places
@@ -54,3 +55,9 @@ text.about=As one of the most iconic hostels, The Royal Hostel is quite simply t
   Spacious, pleasant, each room features specially commissioned fabrics, cushioned furniture and exceedingly \
   comfortable beds, while our white marble bathrooms are said to feature the deepest baths in London. Enjoy the finest \
   pastries with your afternoon tea at The Promenade, visit the hotspot that is China Tang or The Grill.
+our.rooms.are.similar=Our rooms are similar and extraordinary beauty.
+cost.of.our.room=Cost of our room for 1 night is
+if.you.want.to.stay=If you want to stay more than 1 night you should pay $10 more per night.
+more.the.better=There works system "More the better". Book more requests and you will take nice discount \
+for future requests.
+enjoy=Enjoy
