Changed way of adding discount to client Added DB constants

--- a/src/com/savko/i18n/text.properties
+++ b/src/com/savko/i18n/text.properties
@@ -17,6 +17,10 @@ not.confirmed=Not confirmed
 declined=Declined
 not.declined=Not declined
 info=Info
+card.info=Card info
+payment.info=Payment info
+last.digits=Last digits
+date.and.time=Date and time
 make.room.reservation=Make a room reservation
 amount.of.places=Amount of places
 date.from=Date from
@@ -61,3 +65,6 @@ if.you.want.to.stay=If you want to stay more than 1 night you should pay $10 mor
 more.the.better=There works system "More the better". Book more requests and you will take nice discount \
 for future requests.
 enjoy=Enjoy
+successfully.booked=Your request has been successfully booked
+please.wait.confirmation=Please, wait confirmation
+successfully.paid=Your request has been successfully paid
