Client can delete booking request

--- a/src/com/savko/i18n/text.properties
+++ b/src/com/savko/i18n/text.properties
@@ -16,6 +16,7 @@ confirmed=Confirmed
 not.confirmed=Not confirmed
 declined=Declined
 not.declined=Not declined
+delete=Delete
 info=Info
 card.info=Card info
 payment.info=Payment info
